# cpptemplate

./: .gitignore  .woodpecker.yml  CMakeLists.txt  Dockerfile  README.md
cmake/: compile-options.cmake  enable-sanitizers.cmake
doc/: CMakeLists.txt  Doxyfile.in
include/: util.hpp
src/: main.cpp
test/: CMakeLists.txt  main.cpp
